--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.scss" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Tic-Tac-Toe</title>
   </head>
   <body>
     <!-- Game board -->
 
     <div class="container">
-      <h1>Tic Tac Toe</h1>
-      <h1 class="title">Tic <span>Tac</span> Toe</h1>
+      <h1 class="title">Tic<span>-Tac-</span>Toe</h1>
       <div class="status-action">
         <div class="status">× is next</div>
         <div class="reset">Reset</div>
